[gd_scene load_steps=4 format=3]

[ext_resource type="Texture2D" uid="uid://bp4cn2wm3bi6p" path="res://Art/Skill/LittleSkillIcon/Empty.png" id="1"]
[ext_resource type="Script" path="res://Script/MagicWeapon/MagicWeaponSkillCd.gd" id="2"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="3"]

[node name="MagicWeaponSkillCD" type="TextureRect"]
offset_left = -1.0
offset_top = -1.0
offset_right = 46.0
offset_bottom = 46.0
texture = ExtResource( "1" )
script = ExtResource( "2" )

[node name="skillicon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 41.0
offset_bottom = 41.0
expand_mode = 1
metadata/_edit_lock_ = true

[node name="PicBox" type="TextureProgressBar" parent="."]
self_modulate = Color(0, 0, 0.470588, 0.603922)
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 41.0
offset_bottom = 41.0
max_value = 1.0
step = 0.0
value = 1.0
fill_mode = 5
nine_patch_stretch = true
metadata/_edit_lock_ = true

[node name="LastTime" type="Timer" parent="."]
one_shot = true

[node name="TimeText" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered" flags=18]
[connection signal="timeout" from="LastTime" to="." method="_on_last_time_timeout" flags=18]
